<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient_main"
    android:foreground="?android:attr/selectableItemBackgroundBorderless"
    android:orientation="vertical"
    android:id="@+id/llParent"
    tools:context=".ui.SubMainActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:orientation="vertical"/>

    <!--  앱 타이틀  -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <TextView
            android:id="@+id/tvTitle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submain_app_name_1"
            android:textColor="@color/white"
            android:textSize="28dp"
            app:layout_constraintEnd_toStartOf="@id/guideline"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvTitle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submain_app_name_2"
            android:textColor="@color/white"
            android:textSize="22dp"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/tvTitle1"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--  Gif 이미지  -->
    <ImageView
        android:id="@+id/ivGif"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:scaleType="fitCenter"
        android:src="@drawable/img_logo" />

    <!--  메인 진입 버튼  -->
    <LinearLayout
        android:id="@+id/llMainBtn"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">
        <TextView
            android:id="@+id/tvMainBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:text="@string/submain_main_btn_name"
            android:textSize="20dp" />
    </LinearLayout>

    <!--  저작권  -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:text="@string/copy_right"
            android:textSize="12dp" />
    </LinearLayout>

</LinearLayout>